fixed scroll on mobile and desktop css for blog cards

--- a/blog/blog-desktop.css
+++ b/blog/blog-desktop.css
@@ -35,7 +35,7 @@ section{
 
 .sticky-parent {
     /* change this value to adjust horizontal scroll */
-    height: 300vh;
+    height: 200vh;
 }
 
 .scroll-section {
@@ -103,7 +103,7 @@ section{
 }
 
 .blog-title-container {
-    position: absolute;
+    position: fixed;
 
     z-index: 5;
     display: flex;
